<resources>
    <string name="app_name">Space Manager</string>
    <string name="settings">Settings</string>
    <string name="all_beacons">All beacons</string>
    <string name="saved_beacons">Saved beacons</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="beacon_item_dialog_calibrate_btn">calibrate</string>
    <string name="beacon_item_dialog_cancel_btn">cancel</string>
    <string name="beacon_item_dialog_text_calibrating">calibrating...</string>
    <string name="beacon_item_dialog_text_calibrated_rssi">calibrated RSSI</string>
    <string name="beacon_item_dialog_text_rssi">RSSI</string>
    <string name="beacon_item_dialog_text_minor">minor</string>
    <string name="beacon_item_dialog_text_major">mijor</string>
    <string name="beacon_item_dialog_text_uuid">UUID</string>
    <string name="beacon_item_dialog_text_mac">mac</string>
    <string name="beacon_item_dialog_text_name">Name</string>
    <string name="stop_beacon_scanning">Stop beacon scanning</string>
    <string name="run_beacon_scanning">Run beacon scanning</string>
    <string name="action_on_beacon_entering_close_distance">Action on beacon entering close distance:</string>
    <string name="action_on_beacon_exiting_close_distance">Action on beacon exiting close distance:</string>
    <string name="save">save</string>
    <string name="scanning_category_name">Scanning</string>
    <string name="show">show</string>
    <string name="scan_period_text">Scann period (ms)</string>
    <string name="enter_scan_period_text">Enter scann period in ms:</string>
    <string name="scan_period_summary">Period between BLE scanns</string>
    <string name="other_category_name">Other</string>
    <string name="log_to_file_text">Log to file</string>
    <string name="enter_number_of_empty_scans_text">Enter number of scans before beacon will be gone:</string>
    <string name="scans_before_gone_summary">Number of scan cycles, before beacon will be considered as gone</string>
    <string name="scans_before_gone_text">Scan cycles before beacon gone</string>
    <string name="enter_calibration_time_text">Enter calibration time (s):</string>
    <string name="calibration_time_text">Beacon calibration time (s)</string>
    <string name="calibration_time_summary">Time of beacon calibration</string>
</resources>
